--- a/Html_Testing.ipynb
+++ b/Html_Testing.ipynb
@@ -674,11 +674,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 190,
    "id": "33a18e01-f19d-44a2-bd39-80cab7f803ee",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -695,7 +693,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1ce9eb48e20>"
+       "<IPython.lib.display.IFrame at 0x1cea60b3490>"
       ]
      },
      "metadata": {},
@@ -784,13 +782,10 @@
     ")\n",
     "\n",
     "\n",
-    "\n",
     "#layout = html.Div([title, user_input,  summary_table])\n",
     "\n",
     "layout = html.Div([link, banner_item, table_item ])\n",
     "\n",
-    "\n",
-    "\n",
     "app = dash.Dash(__name__)  # Initialize Dash app\n",
     "app.layout = layout        #set layout\n",
     "#app.run_server(mode='inline', height=100)  # Run the server\n",
@@ -799,414 +794,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 189,
    "id": "f3de323c-0b99-484b-9027-e5ab9a57eb89",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------------------------------------------------\n",
+      "NoLayoutException                         Traceback (most recent call last)\n",
+      "NoLayoutException: The layout was `None` at the time that `run_server` was called.\n",
+      "Make sure to set the `layout` attribute of your application\n",
+      "before running the server.\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8054/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1ce9f6287f0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#COPYT\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "3bf49bc0-8436-4d15-90dc-4db2171b2a9c",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8054/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1ce9eecb550>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import dash\n",
-    "from dash import dcc, html\n",
-    "\n",
-    "app = dash.Dash(__name__)\n",
-    "\n",
-    "#options = [\n",
-    "#    {'label': 'New York City', 'value': 'NYC'},\n",
-    "#    {'label': 'Montreal', 'value': 'MTL'},\n",
-    "#    {'label': 'San Francisco', 'value': 'SF'}\n",
-    "#]\n",
-    "menu_income:[\n",
-    "    {'label':'1 - Less than $10,000', 'value':1}, \n",
-    "    {'label':'2 - Less than $15,000 ($10,000 to less than $15,000)', 'value':2},\n",
-    "    {'label':'3 - Less than $20,000 ($15,000 to less than $20,000)', 'value':3},\n",
-    "    {'label':'4 - Less than $25,000 ($20,000 to less than $25,000)', 'value':4},\n",
-    "    {'label':'5 - Less than $35,000 ($25,000 to less than $35,000)', 'value':5},\n",
-    "    {'label':'6 - Less than $50,000 ($35,000 to less than $50,000)', 'value':6},\n",
-    "    {'label':'7 - Less than $75,000 ($50,000 to less than $75,000)', 'value':7},\n",
-    "    {'label':'8 - $75,000 or more', 'value':8}\n",
-    "    ]\n",
-    "\n",
-    "table_item = html.Div(\n",
-    "    id=\"my-table\",  # Add the ID here\n",
-    "    children=[\n",
-    "        html.Table(\n",
-    "            style={'width': '100%'},  # Optional: Set table width\n",
-    "            children=[\n",
-    "                html.Thead([\n",
-    "                    html.Tr([\n",
-    "                        html.Th(\"Column 1\"),\n",
-    "                        html.Th(\"Column 2\"),\n",
-    "                        html.Th(\"Column 3\"),\n",
-    "                    ])\n",
-    "                ]),\n",
-    "                html.Tbody([\n",
-    "                    html.Tr([\n",
-    "                        html.Td(\n",
-    "                            children=[\n",
-    "                                html.Div(\n",
-    "                                    \"Content inside a styled Td\",\n",
-    "                                    style={\n",
-    "                                        \"padding\": \"10px\",\n",
-    "                                        \"border\": \"1px solid lightgray\",\n",
-    "                                        \"background-color\": \"#f5f5f5\",\n",
-    "                                    },\n",
-    "                                )\n",
-    "                            \n",
-    "                               # \"Row 1, Column 1\",\n",
-    "                               # style={'vertical-align': 'top', 'rowspan': 2},  # Style for spanning  HERE HERE HERE \n",
-    "                            ]\n",
-    "                            ),\n",
-    "                        html.Td(\"Row 1, Column 2\"),\n",
-    "                        html.Td(\"Row 1, Column 3\"),\n",
-    "                    ]),\n",
-    "                    html.Tr([\n",
-    "                        html.Td(),  # Empty cell for visual effect\n",
-    "                        html.Td(\"Row 2, Column 2\"),\n",
-    "                        html.Td(\"Row 2, Column 3\"),\n",
-    "                    ]),\n",
-    "                ]),\n",
-    "            ],\n",
-    "        )\n",
-    "    ],\n",
-    ")\n",
-    "\n",
-    "user_input =    html.Div([\n",
-    "        dcc.Dropdown(\n",
-    "            id='menu_income_id',\n",
-    "            options=menu_income,\n",
-    "            placeholder=\"Please choose your income range.\"\n",
-    "            #value='NYC1'  # Initial value\n",
-    "        ),\n",
-    "        dcc.Dropdown(\n",
-    "            id='my-dropdown2',\n",
-    "            options=options,\n",
-    "            placeholder=\"Select a city\"\n",
-    "            #value='NYC2'  # Initial value\n",
-    "        ),\n",
-    "        dcc.Dropdown(\n",
-    "            id='my-dropdown3',\n",
-    "            options=options,\n",
-    "            placeholder=\"Select a city\"\n",
-    "            #value='NYC3'  # Initial value\n",
-    "        )        \n",
-    "        \n",
-    "    ])\n",
-    "\n",
-    "#layout = html.Div([title, user_input,  summary_table])\n",
-    "\n",
-    "layout = html.Div([link, banner_item, table_item , user_input])\n",
-    "\n",
-    "\n",
+    "from dash.dependencies import Output, Input, State\n",
     "\n",
     "app = dash.Dash(__name__)  # Initialize Dash app\n",
-    "app.layout = layout        #set layout\n",
-    "#app.run_server(mode='inline', height=100)  # Run the server\n",
-    "app.run_server(mode='inline', height=100, port=8054)  # Change the port number (e.g., 8051)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1d85ef9-b40c-48f9-a006-605571fe8756",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "4d6c6a3a-1913-4f13-8a04-f85a1fffb720",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8054/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1ce9eecb550>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import dash\n",
-    "from dash import dcc, html\n",
     "\n",
-    "app = dash.Dash(__name__)\n",
-    "\n",
-    "options = [\n",
-    "    {'label': 'New York City', 'value': 'NYC'},\n",
-    "    {'label': 'Montreal', 'value': 'MTL'},\n",
-    "    {'label': 'San Francisco', 'value': 'SF'}\n",
-    "]\n",
-    "menu_income:[\n",
-    "    {'label':'1 - Less than $10,000', 'value':1}, \n",
-    "    {'label':'2 - Less than $15,000 ($10,000 to less than $15,000)', 'value':2},\n",
-    "    {'label':'3 - Less than $20,000 ($15,000 to less than $20,000)', 'value':3},\n",
-    "    {'label':'4 - Less than $25,000 ($20,000 to less than $25,000)', 'value':4},\n",
-    "    {'label':'5 - Less than $35,000 ($25,000 to less than $35,000)', 'value':5},\n",
-    "    {'label':'6 - Less than $50,000 ($35,000 to less than $50,000)', 'value':6},\n",
-    "    {'label':'7 - Less than $75,000 ($50,000 to less than $75,000)', 'value':7},\n",
-    "    {'label':'8 - $75,000 or more', 'value':8}\n",
-    "    ]\n",
-    "\n",
-    "table_item = html.Div(\n",
-    "    id=\"my-table\",  # Add the ID here\n",
-    "    children=[\n",
-    "        html.Table(\n",
-    "            style={'width': '100%'},  # Optional: Set table width\n",
-    "            children=[\n",
-    "                html.Thead([\n",
-    "                    html.Tr([\n",
-    "                        html.Th(\"Column 1\"),\n",
-    "                        html.Th(\"Column 2\"),\n",
-    "                        html.Th(\"Column 3\"),\n",
-    "                    ])\n",
-    "                ]),\n",
-    "                html.Tbody([\n",
-    "                    html.Tr([\n",
-    "                        html.Td(\n",
-    "                            children=[\n",
-    "                                html.Div(\n",
-    "                                    \"Content inside a styled Td\",\n",
-    "                                    style={\n",
-    "                                        \"padding\": \"10px\",\n",
-    "                                        \"border\": \"1px solid lightgray\",\n",
-    "                                        \"background-color\": \"#f5f5f5\",\n",
-    "                                    },\n",
-    "                                )\n",
-    "                            \n",
-    "                               # \"Row 1, Column 1\",\n",
-    "                               # style={'vertical-align': 'top', 'rowspan': 2},  # Style for spanning  HERE HERE HERE \n",
-    "                            ]\n",
-    "                            ),\n",
-    "                        html.Td(\"Row 1, Column 2\"),\n",
-    "                        html.Td(\"Row 1, Column 3\"),\n",
-    "                    ]),\n",
-    "                    html.Tr([\n",
-    "                        html.Td(),  # Empty cell for visual effect\n",
-    "                        html.Td(\"Row 2, Column 2\"),\n",
-    "                        html.Td(\"Row 2, Column 3\"),\n",
-    "                    ]),\n",
-    "                ]),\n",
-    "            ],\n",
-    "        )\n",
-    "    ],\n",
+    "#layout is saved to a variable so I dont have to keep running it\n",
+    "layout = html.Div([\n",
+    "    link,\n",
+    "    banner_item,\n",
+    "    html.Div(\n",
+    "        id=\"content-container\",\n",
+    "        children=[\n",
+    "            table_item,\n",
+    "            html.Div(id='dd-output-container')\n",
+    "        ]\n",
+    "    )\n",
+    "])\n",
+    "@app.callback(\n",
+    "    Output(component_id='dd-output-container', component_property='children'),\n",
+    "    [Input(component_id='submit-button', component_property='n_clicks')]\n",
     ")\n",
-    "\n",
-    "user_input =    html.Div([\n",
-    "        dcc.Dropdown(\n",
-    "            id='menu_income',\n",
-    "            options=options,\n",
-    "            placeholder=\"Please choose your income range.\"\n",
-    "            #value='NYC1'  # Initial value\n",
-    "        ),\n",
-    "        dcc.Dropdown(\n",
-    "            id='my-dropdown2',\n",
-    "            options=options,\n",
-    "            placeholder=\"Select a city\"\n",
-    "            #value='NYC2'  # Initial value\n",
-    "        ),\n",
-    "        dcc.Dropdown(\n",
-    "            id='my-dropdown3',\n",
-    "            options=options,\n",
-    "            placeholder=\"Select a city\"\n",
-    "            #value='NYC3'  # Initial value\n",
-    "        )        \n",
+    "def update_output(n_clicks):\n",
+    "    if n_clicks > 0:\n",
+    "        # Access user input from your defined variables (user_input1, user_input2, etc.)\n",
+    "        user_input = {\n",
+    "            \"income_code\": user_input1,\n",
+    "            \"general_health_code\": user_input2\n",
+    "            # ... add other user input variables\n",
+    "        }\n",
     "        \n",
-    "    ])\n",
-    "\n",
-    "#layout = html.Div([title, user_input,  summary_table])\n",
-    "\n",
-    "layout = html.Div([link, banner_item, table_item , user_input])\n",
-    "\n",
-    "\n",
-    "\n",
-    "app = dash.Dash(__name__)  # Initialize Dash app\n",
-    "app.layout = layout        #set layout\n",
-    "#app.run_server(mode='inline', height=100)  # Run the server\n",
-    "app.run_server(mode='inline', height=100, port=8054)  # Change the port number (e.g., 8051)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "186e78e5-08eb-4b32-8e03-286043715e1b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3876bd9-6eba-4033-8359-8e525844304d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "70bed9af-ceda-448e-9302-904e2d818e25",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8054/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1ce9f395bb0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import dash\n",
-    "from dash import dcc, html\n",
-    "\n",
-    "app = dash.Dash(__name__)\n",
-    "\n",
-    "options = [\n",
-    "    {'label': 'New York City', 'value': 'NYC'},\n",
-    "    {'label': 'Montreal', 'value': 'MTL'},\n",
-    "    {'label': 'San Francisco', 'value': 'SF'}\n",
-    "]\n",
-    "menu_income:[\n",
-    "    {'label':'1 - Less than $10,000', 'value':1}, \n",
-    "    {'label':'2 - Less than $15,000 ($10,000 to less than $15,000)', 'value':2},\n",
-    "    {'label':'3 - Less than $20,000 ($15,000 to less than $20,000)', 'value':3},\n",
-    "    {'label':'4 - Less than $25,000 ($20,000 to less than $25,000)', 'value':4},\n",
-    "    {'label':'5 - Less than $35,000 ($25,000 to less than $35,000)', 'value':5},\n",
-    "    {'label':'6 - Less than $50,000 ($35,000 to less than $50,000)', 'value':6},\n",
-    "    {'label':'7 - Less than $75,000 ($50,000 to less than $75,000)', 'value':7},\n",
-    "    {'label':'8 - $75,000 or more', 'value':8}\n",
-    "    ]\n",
-    "\n",
-    "table_item = html.Div(\n",
-    "    id=\"my-table\",  # Add the ID here\n",
-    "    children=[\n",
-    "        html.Table(\n",
-    "            style={'width': '100%'},  # Optional: Set table width\n",
-    "            children=[\n",
-    "                html.Thead([\n",
-    "                    html.Tr([\n",
-    "                        html.Th(\"Column 1\"),\n",
-    "                        html.Th(\"Column 2\"),\n",
-    "                        html.Th(\"Column 3\"),\n",
-    "                    ])\n",
-    "                ]),\n",
-    "                html.Tbody([\n",
-    "                    html.Tr([\n",
-    "                        html.Td(\n",
-    "                            \"Row 1, Column 1\",\n",
-    "                            style={'vertical-align': 'top', 'rowspan': 2},  # Style for spanning  HERE HERE HERE \n",
-    "                        ),\n",
-    "                        html.Td(\"Row 1, Column 2\"),\n",
-    "                        html.Td(\"Row 1, Column 3\"),\n",
-    "                    ]),\n",
-    "                    html.Tr([\n",
-    "                        html.Td(),  # Empty cell for visual effect\n",
-    "                        html.Td(\"Row 2, Column 2\"),\n",
-    "                        html.Td(\"Row 2, Column 3\"),\n",
-    "                    ]),\n",
-    "                ]),\n",
-    "            ],\n",
-    "        )\n",
-    "    ],\n",
-    ")\n",
-    "\n",
-    "user_input =    html.Div([\n",
-    "        dcc.Dropdown(\n",
-    "            id='menu_income',\n",
-    "            options=options,\n",
-    "            placeholder=\"Please choose your income range.\"\n",
-    "            #value='NYC1'  # Initial value\n",
-    "        ),\n",
-    "        dcc.Dropdown(\n",
-    "            id='my-dropdown2',\n",
-    "            options=options,\n",
-    "            placeholder=\"Select a city\"\n",
-    "            #value='NYC2'  # Initial value\n",
-    "        ),\n",
-    "        dcc.Dropdown(\n",
-    "            id='my-dropdown3',\n",
-    "            options=options,\n",
-    "            placeholder=\"Select a city\"\n",
-    "            #value='NYC3'  # Initial value\n",
-    "        )        \n",
+    "        # Perform actions with the user input (e.g., send to server)\n",
+    "        # ... your logic here ...\n",
     "        \n",
-    "    ])\n",
-    "\n",
-    "#layout = html.Div([title, user_input,  summary_table])\n",
-    "\n",
-    "layout = html.Div([link, banner_item, table_item , user_input])\n",
-    "\n",
-    "\n",
-    "\n",
-    "app = dash.Dash(__name__)  # Initialize Dash app\n",
-    "app.layout = layout        #set layout\n",
-    "#app.run_server(mode='inline', height=100)  # Run the server\n",
-    "app.run_server(mode='inline', height=100, port=8054)  # Change the port number (e.g., 8051)"
+    "        # Update output based on user input or actions\n",
+    "        return f\"User submitted data: {user_input}\"\n",
+    "    else:\n",
+    "        return \"Click the submit button to see the output.\"\n",
+    "#app.run_server(mode='inline', height=100, port=8054)  # Change the port number (e.g., 8051)\n",
+    "if __name__ == '__main__':\n",
+    "    app.run_server(debug=True,port=8054)"
    ]
   },
   {
@@ -1219,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 191,
    "id": "38b46a31-78a0-46e0-8052-38a337110379",
    "metadata": {},
    "outputs": [
@@ -1238,7 +906,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1cea72eac70>"
+       "<IPython.lib.display.IFrame at 0x1cea76140d0>"
       ]
      },
      "metadata": {},
