--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -809,6 +809,33 @@
       "File \u001b[1;32m~\\.conda\\envs\\capstoneCDC_venv\\lib\\site-packages\\dash\\_jupyter.py:382\u001b[0m, in \u001b[0;36mJupyterDash.run_app.<locals>.wait_for_app\u001b[1;34m()\u001b[0m\n\u001b[0;32m    380\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m res \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAlive\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m    381\u001b[0m         url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttp://\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhost\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mport\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m--> 382\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m(\n\u001b[0;32m    383\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAddress \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m already in use.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    384\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m    Try passing a different port to run_server.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    385\u001b[0m         )\n\u001b[0;32m    386\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m requests\u001b[38;5;241m.\u001b[39mConnectionError \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m    387\u001b[0m     _get_error()\n",
       "\u001b[1;31mOSError\u001b[0m: Address 'http://127.0.0.1:8050' already in use.\n    Try passing a different port to run_server."
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2024-08-03 08:17:18,116] ERROR in app: Exception on /_alive_4804aadd-01f7-44d4-a9fb-ba14e2820618 [GET]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Everydayuse\\.conda\\envs\\capstoneCDC_venv\\lib\\site-packages\\flask\\app.py\", line 2447, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"C:\\Users\\Everydayuse\\.conda\\envs\\capstoneCDC_venv\\lib\\site-packages\\flask\\app.py\", line 1952, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"C:\\Users\\Everydayuse\\.conda\\envs\\capstoneCDC_venv\\lib\\site-packages\\flask\\app.py\", line 1821, in handle_user_exception\n",
+      "    reraise(exc_type, exc_value, tb)\n",
+      "  File \"C:\\Users\\Everydayuse\\.conda\\envs\\capstoneCDC_venv\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
+      "    raise value\n",
+      "  File \"C:\\Users\\Everydayuse\\.conda\\envs\\capstoneCDC_venv\\lib\\site-packages\\flask\\app.py\", line 1948, in full_dispatch_request\n",
+      "    rv = self.preprocess_request()\n",
+      "  File \"C:\\Users\\Everydayuse\\.conda\\envs\\capstoneCDC_venv\\lib\\site-packages\\flask\\app.py\", line 2242, in preprocess_request\n",
+      "    rv = func()\n",
+      "  File \"C:\\Users\\Everydayuse\\.conda\\envs\\capstoneCDC_venv\\lib\\site-packages\\dash\\dash.py\", line 1412, in _setup_server\n",
+      "    _validate.validate_layout(self.layout, self._layout_value())\n",
+      "  File \"C:\\Users\\Everydayuse\\.conda\\envs\\capstoneCDC_venv\\lib\\site-packages\\dash\\_validate.py\", line 414, in validate_layout\n",
+      "    raise exceptions.NoLayoutException(\n",
+      "dash.exceptions.NoLayoutException: The layout was `None` at the time that `run_server` was called.\n",
+      "Make sure to set the `layout` attribute of your application\n",
+      "before running the server.\n"
+     ]
     }
    ],
    "source": [
